tests/jastadd/negative/name_errors/L3/4_DeclareBeforeUse.ob
MODULE TestModule;
	PROCEDURE f;
	BEGIN
        g
	END f;

    PROCEDURE g;

    END g;
END TestModule.
